# solid_etl

./: .gitignore  README.md  docker-compose.yaml  flow.drawio  main.py  pyproject.toml  script.py
docs/diagrams/src/: connector.puml
src/: connect.py  etl.py  extractor.py  load.py  transform.py
