[tool.poetry]
name = "solid-etl"
version = "0.1.0"
description = "A SOLID way to build a ETL"
authors = ["thiago_deschamps"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.20"
psycopg2 = "^2.9.7"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
